--- a/css/theming.css
+++ b/css/theming.css
@@ -50,15 +50,19 @@ header#header {
 #apps li.in-header > a {
 	padding: 12px 16px 12px 16px !important;
 }
+#apps li span {
+	font-size: 15px;
+}
+
 #apps li .category {
 	font-weight: bold;
-	font-size: 16px;
 	/*color: #f1f1f1;*/
+	/*color: #1f1f1f;*/
 	display: inline-flex;
 	padding: 8px 16px 4px 16px;
 }
 #apps li img {
-	width: 16px !important;
+	width: 20px !important;
 	height: auto !important;
 	margin-right: 16px !important;
 }
