top bar bottom border
Signed-off-by: Julien Veyssier <eneiluj@posteo.net>

--- a/css/theming.css
+++ b/css/theming.css
@@ -25,6 +25,7 @@ body.dashboard--inverted:not(.dashboard--dark) .header-right > div:not(#settings
 
 header#header {
 	background-color: white !important;
+	border-bottom: 1px solid #dddddd;
 }
 
 #appmenu {
