hide 'show all contacts' in contacts menu
Signed-off-by: Julien Veyssier <eneiluj@posteo.net>

--- a/css/theming.css
+++ b/css/theming.css
@@ -35,6 +35,9 @@ header .header-right .icon-contacts {
 header .header-right #contactsmenu {
 	opacity: .88 !important;
 }
+header .header-right #contactsmenu .content .footer {
+	display: none !important;
+}
 
 #appmenu {
 	width: 40px;
