attempt to fix release build
Signed-off-by: Julien Veyssier <eneiluj@posteo.net>

--- a/css/theming.scss
+++ b/css/theming.scss
@@ -35,7 +35,7 @@ header#header {
 			background-color: rgba(0, 0, 0, 0.1);
 		}
 		.notifications .notifications-button {
-			background: url('../../notifications/img/notifications-dark.svg') no-repeat center !important;
+			background: url('../img/notifications-dark.svg') no-repeat center !important;
 			background-size: 20px !important;
 			opacity: .865 !important;
 			img {
