hide call button in Talk's files sidebar
Signed-off-by: Julien Veyssier <julien-nc@posteo.net>

--- a/css/theming.scss
+++ b/css/theming.scss
@@ -181,3 +181,8 @@ header#header {
 div[role=tooltip] {
 	top: 50px !important;
 }
+
+/* hide call button in Files sidebar */
+#call_button {
+	display: none;
+}
