--- a/css/theming.scss
+++ b/css/theming.scss
@@ -100,90 +100,8 @@ header#header {
 	}
 }
 
-#appmenu {
-	width: 40px;
-	min-width: 40px;
-	> li[tabindex="-1"] {
-		display: none;
-	}
-	> li#more-apps {
-		display: flex !important;
-		width: 40px;
-		padding: 0;
-		a {
-			div {
-				transform: unset !important;
-			}
-			span {
-				display: none !important;
-			}
-		}
-	}
-	li a {
-		opacity: unset;
-		height: 63px;
-		&:hover {
-			background-color: rgba(0, 0, 0, 0.1);
-		}
-	}
-	/* Hide triangle on active app and dropdown menu */
-	li a.active::before,
-	li:hover a::before,
-	li:hover a.active::before,
-	li a:focus::before {
-		display: none !important;
-	}
-}
-
-#apps {
-	/* set style of categories and custom items */
-	> ul {
-		padding: 12px 0 12px 0;
-		overflow-y: unset !important;
-		li {
-			display: list-item !important;
-			&.in-header > a {
-				padding: 12px 16px 12px 16px !important;
-				min-height: 44px !important;
-				height: unset !important;
-			}
-			&.elementcontainer {
-				font-size: 15px;
-				> a:hover {
-					/*background: var(--color-primary) !important;*/
-					background-color: rgba(0, 0, 0, 0.1) !important;
-				}
-			}
-			span {
-				line-height: 20px;
-				max-width: unset !important;
-				white-space: pre-wrap !important;
-				overflow: unset !important;
-				text-overflow: unset !important;
-				color: #1f1f1f !important;
-				body.theme--dark & {
-					color: #f1f1f1 !important;
-				}
-			}
-			img {
-				width: 20px !important;
-				height: 20px !important;
-				margin-right: 16px !important;
-				opacity: 1 !important;
-			}
-			.icon-loading-small {
-				display: none;
-			}
-			.category {
-				font-weight: bold;
-				font-size: 17px;
-				/*color: #f1f1f1;*/
-				/*color: #1f1f1f;*/
-				display: inline-flex;
-				padding: 8px 16px 4px 16px;
-			}
-		}
-	}
+nav.app-menu {
+	display: none !important;
 }
 
 .icon-more-white {
