fix header logo image
Signed-off-by: Julien Veyssier <julien-nc@posteo.net>

--- a/css/theming.scss
+++ b/css/theming.scss
@@ -123,6 +123,7 @@ nav.app-menu {
 		margin: 0 24px 0 24px;
 		left: 0;
 		top: 0;
+		background-image: url('../img/phoenix_suite_logo-Assets/SVG/phoenix_suite_logo.svg');
 	}
 }
 
