leave tooltip alone, fix issue with tooltip masking action menu entry (password policy for example)
Signed-off-by: Julien Veyssier <julien-nc@posteo.net>

--- a/css/theming.scss
+++ b/css/theming.scss
@@ -184,7 +184,7 @@ header#header {
 }
 
 div[role=tooltip] {
-	top: 50px !important;
+	// top: 50px !important;
 }
 
 /* hide call button in Files sidebar */
