--- a/css/theming.scss
+++ b/css/theming.scss
@@ -57,6 +57,10 @@ header#header {
 		> div:hover {
 			background-color: rgba(0, 0, 0, 0.1);
 		}
+		// for NC between 25.0.0 and 25.0.2
+		#contactsmenu .menutoggle {
+			filter: invert(100%);
+		}
 		#contactsmenu .header-menu__trigger,
 		#notifications .header-menu__trigger {
 			//background: url('../img/notifications-dark.svg') no-repeat center !important;
