--- a/css/theming.scss
+++ b/css/theming.scss
@@ -43,6 +43,7 @@ header#header {
 		#contactsmenu #header-menu-contactsmenu {
 			top: 64px !important;
 		}
+		#user-menu .header-menu__trigger,
 		#unified-search .header-menu__trigger,
 		#notifications .header-menu__trigger,
 		#contactsmenu .header-menu__trigger {
