make logo url configurable with app config 'logo-url', fallback to phoenix one
Signed-off-by: Julien Veyssier <julien-nc@posteo.net>

--- a/css/theming.css
+++ b/css/theming.css
@@ -106,10 +106,16 @@ nav.app-menu {
 }
 
 header#header .header-left #nextcloud {
-  padding-left: 128px;
+  width: 138px;
+  padding: 0;
   margin: 0;
   height: 100%;
-  background: center no-repeat url("../img/phoenix_suite_logo-Assets/SVG/phoenix_suite_logo.svg");
+  align-items: center;
+  justify-content: center;
+}
+header#header .header-left #nextcloud .custom-logo {
+  height: 100%;
+  width: auto;
 }
 header#header .header-left #nextcloud .logo {
   display: none;
