hide contacts, calendar and calendar_todo activity navigation items
Signed-off-by: Julien Veyssier <julien-nc@posteo.net>

--- a/css/theming.css
+++ b/css/theming.css
@@ -130,4 +130,11 @@ div[role=tooltip] {
   display: none;
 }
 
+/* hide some activity navigation items */
+main#content.app-activity a[data-navigation=contacts],
+main#content.app-activity a[data-navigation=calendar],
+main#content.app-activity a[data-navigation=calendar_todo] {
+  display: none;
+}
+
 /*# sourceMappingURL=theming.css.map */
