add option to toggle custom logo, theming one is used if disabled
Signed-off-by: Julien Veyssier <julien-nc@posteo.net>

--- a/css/theming.css
+++ b/css/theming.css
@@ -118,6 +118,10 @@ header#header .header-left #nextcloud .custom-logo {
   width: auto;
 }
 header#header .header-left #nextcloud .logo {
+  width: 100%;
+  left: unset;
+}
+header#header .header-left #nextcloud .logo.hidden {
   display: none;
 }
 
