remove main content margin
Signed-off-by: Julien Veyssier <julien-nc@posteo.net>

--- a/css/square-corners.css
+++ b/css/square-corners.css
@@ -1,3 +1,8 @@
 #content {
 	border-radius: unset !important;
+	margin: 0 !important;
+	margin-top: var(--my-header-height) !important;
+	width: 100%;
+	/*height: calc(100% - env(safe-area-inset-bottom) - var(--my-header-height) - var(--body-container-margin) - 10px);*/
+	height: calc(100% - env(safe-area-inset-bottom) - var(--my-header-height)) !important;
 }
